# lesson-30

./: .gitignore  README.md  pyproject.toml
ads/: admin.py  models.py  serializers.py  urls.py  views.py
ads/management/commands/: load_ads.py  load_category.py
ads/migrations/: 0001_initial.py  0002_alter_ads_price.py  0003_alter_ads_description.py  0004_rename_author_id_ads_author_and_more.py  0005_alter_ads_description.py  0006_alter_ads_description.py  0007_alter_ads_description_alter_ads_name.py  0008_alter_category_name.py
bulletin_board/: settings.py  urls.py
users/: models.py  serializers.py  urls.py  views.py
users/management/commands/: load_location.py  load_user.py
users/migrations/: 0001_initial.py  0002_alter_user_age.py  0003_alter_user_username.py  0004_alter_user_managers_user_date_joined_user_email_and_more.py  0005_alter_location_name_alter_user_role.py
